# ggb

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: bench_build.yml  build.yml  ci.yml  test.yml
bench/: CMakeLists.txt  README.md  main.cpp
bench/common/: config.h  queries.h  result.h  runner.h  sinks.h  stats.h  timer.h
bench/engines/: engines.h  in_memory.cpp
bench/query_gen/: README.md  __main__.py  download_ogbn_data.py  generate_queries.py  main.py  pyproject.toml
include/: ggb.h
include/ggb/: core.h
scripts/: bench_run.sh  bench_run_query_gen.sh  bench_setup_python.sh  build.sh  ggb_build.sh  ggb_run_tests.sh
src/: engine_factory.cpp
src/common/: io.h  logging.h  mmap_region.h
src/engines/flat_mmap/: flat_mmap.cpp  flat_mmap.h
src/engines/ggb/: ggb.cpp  ggb.h
src/engines/in_memory/: in_memory.cpp  in_memory.h
test/: test_engine_factory.cpp  test_feature_store.cpp  test_ggb.cc  test_ggb.cpp  test_io.cpp  test_mmap_region.cpp
